--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -21,3 +21,49 @@ blockquote {
 
 
 // put your custom CSS here!
+/* Container for side-by-side topics */
+.topic-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+/* Each topic takes half the width */
+.topic {
+    width: 48%;
+    border: 1px solid #ccc;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+/* Headings and layout styles */
+h2, h3 {
+    margin-bottom: 15px;
+}
+
+p {
+    margin-bottom: 15px;
+}
+
+a {
+    color: crimson;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/* Separating the groups of topics */
+hr {
+    border: none;
+    border-top: 2px solid #ccc;
+    margin: 40px 0;
+}
+
+h2 {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
